--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+#root {
+  min-height: 100vh;
+  background: #e9e9e9;
+  margin: 0%;
+  padding: 0%;
+}
+
 .game-box {
   display: flex;
   flex-direction: column;
@@ -52,4 +59,15 @@
   background: #F2C94C;
   border: none;
   font-size: 24px;
+}
+
+.icon_dark_mode {
+  width: 100px;
+  height: 30px;
+  margin-top: 20px;
+}
+.icon_light_mode {
+  width: 100px;
+  height: 30px;
+  margin-top: 20px;
 }
