--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,12 @@
     src: url("../public/font/Lalezar-Font/TTF/Lalezar-Regular.ttf");
 }
 
-#root {
-    min-height: 98vh;
-    background: #e7e7e7;
-    margin: 0%;
-    padding: 0%;
-}
+
 * {
     font-family: Lalezar;
+}
+body {
+    margin: 0%;
+    padding: 0%;
+    height: 100%;
 }
